--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<script src="js/three.js"></script>
-	<script src="js/index.js" ></script>
+	<script src="js/index.js" type="module"></script>
 </body>
 
 </html>
