troubleshooting for collision effect to player * pause screen when player dies on the ground -> placeholder for final feedback

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+	<div class="js-three-container"></div>
+	<div class="starting-ui"></div>
+
 	<script src="js/three.js"></script>
 	<script src="js/index.js" type="module"></script>
 </body>
