--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 	<div class="js-three-container"></div>
-	<div class="starting-ui"></div>
+	<div class="starting-ui" id="ui-start"></div>
+	<div class="ending-ui"></div>
 
 	<script src="js/three.js"></script>
 	<script src="js/index.js" type="module"></script>
