--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 	<div class="js-three-container"></div>
-	<div class="starting-ui" id="ui-start"></div>
+	<div class="starting-ui" id="ui-start">
+		<button id="start-button">Start</button>
+	</div>
 	<div class="ending-ui"></div>
 
 	<script src="js/three.js"></script>
