game control is finished

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
 	<div class="js-three-container"></div>
-	<div class="ui" id="ui-start">
+	<div class="ui active" id="ui-start">
 		<button id="start-button">Start</button>
 	</div>
-	<div class="ending-ui"></div>
+	<div class="ui inactive" id="ui-end">
+		<button id="restart-button">Restart</button>
+	</div>
 
 	<script src="js/three.js"></script>
 	<script src="js/index.js" type="module"></script>
