--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<button id="restart-button">Restart</button>
 	</div>
 
-	<script src="js/three.js"></script>
+	<!-- <script src="js/three.js"></script> -->
 	<script src="js/index.js" type="module"></script>
 </body>
 
